# CSCI-795-ML

./: .gitignore  README.md  build-dataset.sh  curate-dataset.sh  features.txt  magic-items.csv  model_KNN.py  project-workflow.ipynb
assemble-dataset-from-json/: README.md  assemble-dataset-from-json.cabal  json-extraction.cabal~
assemble-dataset-from-json/src/: Main.hs  Parameters.hs
assemble-dataset-from-json/src/Monster/: Elo.hs  Label.hs  StatBlock.hs
classification/: classifier_specification.py  dataset_transforms.py  evaluation_specification.py  featureset_specification.py  model_DecisionTree.py  model_KNN.py  model_LogisticRegression.py  model_NaiveBayes.py  model_NeuralNetwork.py  model_RandomForest.py  model_SVM.py  model_XGBoost.py  model_selection.py  model_testing_alg.py  project-workflow.ipynb
curation/: README.md  cabal.project  curate-json.cabal
curation/src/: Main.hs  Parameters.hs
curation/src/Monster/: Elo.hs  Label.hs  StatBlock.hs
data/: dnd-5e-monsters.csv
json-extractor/: json-extractor.cabal
json-extractor/src/: Item.hs  Main.hs  Parameters.hs
proposal/: proposal.bib  proposal.tex
recording/: demo-magic.sh  demo.md  demonstration.sh
report/: report.tex
source/: monster_data.py
